--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 flask==2.3.3
 flask-cors==4.0.0
+flask-jwt-extended==4.6.0
+flask-bcrypt==1.0.1
 PyPDF2==3.0.1
 openai==1.57.2
 python-dotenv==1.0.1
