🔧 Disable CI warnings in vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -30,6 +30,13 @@
     }
   ],
   "env": {
-    "PYTHONPATH": "./api"
+    "PYTHONPATH": "./api",
+    "CI": "false"
+  },
+  "build": {
+    "env": {
+      "CI": "false",
+      "GENERATE_SOURCEMAP": "false"
+    }
   }
 }
